--- a/Quality/Quality/Views/PublicWondow/Po_Supp_DetailList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/Po_Supp_DetailList.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = null;
+    string TargetID = ViewData["TargetID"] == null ? string.Empty : ViewData["TargetID"].ToString();
 }
 
 @model List<Window_Po_Supp_Detail>
@@ -48,6 +49,7 @@
         <input type="text" name="Seq" value="" />
         @Html.Hidden("FabricType", ViewData["FabricType"]);
         @Html.Hidden("POID", ViewData["POID"]);
+        @Html.Hidden("TargetID", TargetID)
         <input type="submit" value="Query" />
         <input id="btnExit" type="button" value="Exit" />
     }
@@ -120,7 +122,7 @@
             }
 
             // 呼叫父視窗的GetPo_Supp_Detail Function，把物件傳回去
-            window.opener.GetPo_Supp_Detail(Po_Supp_Detail);
+            window.opener.GetPo_Supp_Detail(Po_Supp_Detail,'@TargetID');
 
             window.close();
         });
