--- a/Quality/Quality/Views/PublicWondow/SizeList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/SizeList.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = null;
+    string TargetID = ViewData["TargetID"] == null ? string.Empty : ViewData["TargetID"].ToString();
 }
 
 @model List<Window_Size>
@@ -48,6 +49,7 @@
         @Html.Hidden("BrandID", ViewData["BrandID"]);
         @Html.Hidden("SeasonID", ViewData["SeasonID"]);
         @Html.Hidden("StyleID", ViewData["StyleID"]);
+        @Html.Hidden("TargetID", TargetID)
         <input type="submit" value="Query" />
         <input id="btnExit" type="button" value="Exit" />
     }
@@ -74,7 +76,7 @@
         $(".SelectItem").click(function () {
 
             // 呼叫父視窗的GetSize Function，把值傳回去
-            window.opener.GetSizeList($(this).text());
+            window.opener.GetSizeList($(this).text(), '@TargetID');
 
             window.close();
         });
