--- a/Quality/Quality/Views/PublicWondow/PictureList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/PictureList.cshtml
@@ -5,7 +5,7 @@
     string title = ViewData["Title"] == null ? "Pass1" : ViewData["Title"].ToString();
     string EditMode = ViewData["EditMode"] == null ? "EditMode" : ViewData["EditMode"].ToString();
 
-
+    string TargetID = ViewData["TargetID"] == null ? string.Empty : ViewData["TargetID"].ToString();
 }
 
 @model Window_Picture
