--- a/Quality/Quality/Areas/SampleRFT/Views/Measurement/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Measurement/Index.cshtml
@@ -249,6 +249,12 @@
         if ('@Model.ErrMsg' != '') {
             msg.WithError('@Model.ErrMsg');
         }
+
+        $('#Find').on('click', function () {
+            if ($('#OrderID').val() == "") {
+                return false;
+            }
+        });
     });
 
 
